# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2008; Ulrich Mueller <ulm@gentoo.org> eselect-emacs-9999.ebuild:
  etags.eselect is created from Makefile.

*eselect-emacs-9999 (30 Apr 2008)

  30 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +eselect-emacs-9999.ebuild:
  Live SVN ebuild.
