@@ -1,3 +1,6 @@
+AUX emacs-updater 2880 RMD160 670ba0b40d7c957d1ebf7a61ef6f37205569a721 SHA1 f80a4a5127f1d54494a3b1f3e842f17bd96ba0a1 SHA256 dfdf65efad666f5133e9d2cfdefae31589618de1addd2ae3057cb708ce493f5e
+DIST eselect-emacs-1.5_pre1.tar.bz2 7476 RMD160 fa347921fdb3e9c307ce474d664b43735b7eb968 SHA1 d5009a2b85b3e5f63a52f2e60da53c3573259995 SHA256 787f406c7b4fada6db35ada64f3168f8750ddcc6e4d032cc16ad8e0cb243c6c5
+EBUILD eselect-emacs-1.5_pre1.ebuild 780 RMD160 01251c6ccc3a02133df04fc2bd31d99757441f86 SHA1 7cf124e21c7c12b364102dac07f84cd076e40173 SHA256 721f7747d7dfe68fb05d6fac394494d9293219484e233785ce8006100303a908
 EBUILD eselect-emacs-9999.ebuild 905 RMD160 235e8be13739cdf373b7e48588998ef0c184fe3c SHA1 66fe06c711c08b0f5bda35edc8075578c60509cd SHA256 3bac5377ffe9054e41097a75efdcdcaecd67ae6ab9390edd72e311f85f068a43
-MISC ChangeLog 388 RMD160 1ed7c453d1633d3971b25c4c591d96b29d8c81ae SHA1 1f7982107cbeb6ffc3ef6542d8a826e7de5eee25 SHA256 81bf258821a4ca48d64e2ed5663b16775f0d861b85328d35350b52810b2e60d9
+MISC ChangeLog 545 RMD160 fed1038b47d88feb275f6056f63d22afdd9a00a0 SHA1 492549f8f4c2b83d7afa5f75f625a4b6a714bb3f SHA256 50e42d8eed52a93f73c4a0c57a753775f6a08d58f56861ce223ff3d461fb67e1
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
