@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*eselect-emacs-1.5_pre1 (23 May 2008)
+
+  23 May 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-updater,
+  +eselect-emacs-1.5_pre1.ebuild:
+  Prerelease.
+
   01 May 2008; Ulrich Mueller <ulm@gentoo.org> eselect-emacs-9999.ebuild:
   etags.eselect is created from Makefile.
 
